# jupiter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: cluster.yaml
config/domains/: _template.yaml  unreal_engine.yaml
config/experts/fullstack/: api_design.yaml  react.yaml
config/experts/python/: core.yaml  data_science.yaml  web_backend.yaml
docs/: examples.md  livecodebench_90_percent_guide.md  mac_cluster_setup.md  new_domain.md  self_improvement.md  swarm_moer.md
docs/español/: nvidia_setup.md  self_improvement.md
jupiter/: __init__.py  cli.py
jupiter/config/: __init__.py  base.py  cluster.py  domain.py
jupiter/data/: __init__.py
jupiter/data/collectors/: __init__.py  base.py  docs.py  github.py  web.py
jupiter/data/filters/: __init__.py  dedup.py  quality.py
jupiter/data/generators/: __init__.py  base.py  llm.py
jupiter/data/queue/: __init__.py  data_queue.py
jupiter/orchestrator/: __init__.py  pipeline.py  self_improve.py
jupiter/swarm/: __init__.py  expert.py  router.py  swarm.py  synthesizer.py
jupiter/training/: __init__.py
jupiter/training/distributed/: __init__.py  coordinator.py  gradient_sync.py  trainer.py
jupiter/training/model/: __init__.py  architecture.py  config.py  tokenizer.py
scripts/: train_distributed.py
